package message;
import "common.proto";
enum MsgError
{
	MsgError_NO = 0;
	MsgError_FailedToPlayVideoNotFoundVideo = 1;
	MsgError_FailedToPlayVideoRequiredVIP = 2;
	
}

message MsgC2SReqMovieThemes
{
	
}


message MsgS2CMovieThemesACK
{
	repeated MsgMovieThemeExternal infos = 1;
}



message MsgS2CClientInit
{
	repeated MsgWatchRecordInfo watch_record = 1;
	required int32 vip = 2;
	required string resource_path = 3;
	required string config_pic_path = 4;
	required string config_video_path = 5;
	repeated MsgIntPair gird_theme = 6;
}

message MsgC2SReqThemeInfo
{
	required int64 Theme_id = 1;
}

message MsgS2CThemeInfoACK
{
	required MsgMovieTheme info = 1;
}

message MsgC2SReqMovieInfo
{
	required int64 movie_id = 1;
}

message MsgS2CMovieInfoACK
{
	required MsgMovie info = 1;
}


message MsgC2SReqPlayMovie
{
	required int64 Movie_id = 1;
	required int64 Video_id = 2;
}

message MsgS2CPlayMovieACK
{
	required int64 Movie_id = 1;
	required int64 Video_id = 2;
	required MsgError error = 3 [default = MsgError_NO];
}

message MsgC2SReqAddMovieToFavourite
{
	required int64 Movie_id = 1;	
}

message MsgS2CAddMovieToFavouriteACK
{
	required int64 Movie_id = 1;	
	required MsgError error = 2 [default = MsgError_NO];
}
